h1 fix + cards gap

--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -11,14 +11,14 @@
 
 .card {
     border: 1px solid #000;
-    background-color: rgba(155, 163, 174, 0.5);
+    background-color: rgba(194, 213, 241, 0.5);
     color: #2199ea;
 }
 
 .card:hover {
     transform: translate3D(0, -1px, 0) scale(1.03);
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    background-color: rgba(155, 163, 174, 0.8);
+    background-color: rgba(194, 213, 241, 0.8);
 }
 
 .aboutCard {
@@ -30,9 +30,4 @@
     transform: none;
     background-color: transparent;
     box-shadow: none
-}
-
-.card li {
-    color: #2199ea;
-    background-color: rgba(155, 163, 174, 0.5);
 }
