--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,6 @@ body {
 
 
 h1 {
-  /* font-weight: bold; */
+  font-weight: bold;
   color: #002471;
 }
